Changed tests and fixed update methods